--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,12 @@ repositories {
     mavenCentral()
 }
 
-bootJar {
-    launchScript()
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
     runtimeOnly 'org.postgresql:postgresql:42.2.23.jre7'
