Вместо Heroku Redis, теперь Redislabs (но можно поменять на любую другую)

--- a/src/main/resources/application-heroku.yml
+++ b/src/main/resources/application-heroku.yml
@@ -11,7 +11,9 @@ spring:
       ddl-auto: update
 
   redis:
-    url: ${REDIS_TLS_URL}
+    port: ${REDIS_PORT}
+    host: ${REDIS_HOST}
+    password: ${REDIS_PASSWORD}
 server:
   port: ${PORT}
 firebase:
