--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,18 +2,18 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url:
-    username:
-    password:
+    url: jdbc:postgresql://postgres/
+    username: postgres
+    password: secret_password
 
   jpa:
     hibernate:
       ddl-auto: update
 
   redis:
-    host:
-    port:
+    host: redis
+    port: 6379
 
 firebase:
   cloud-messaging:
-    server-key:
+    server-key: ${FCM_SERVER_KEY}
