--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     image: sacmi5/tempservice
     environment:
       FCM_SERVER_KEY: test
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret_password
     depends_on:
       - postgres
       - redis
